Some comments along the way of studying course