@@ -5,7 +5,7 @@ import io.grpc.netty.shaded.io.grpc.netty.NettyServerBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.function.Consumer;
 
 public class GrpcServer {
@@ -14,53 +14,51 @@ public class GrpcServer {
 
     private final Server server;
 
-    private GrpcServer(Server server){
+    private GrpcServer(Server server) {
         this.server = server;
     }
 
-    public static GrpcServer create(BindableService... services){
+    public static GrpcServer create(BindableService... services) {
         return create(6565, services);
     }
 
-    public static GrpcServer create(int port, BindableService... services){
-        return create(port, builder -> {
-            Arrays.asList(services).forEach(builder::addService);
-        });
+    public static GrpcServer create(int port, BindableService... services) {
+        return create(port, builder -> List.of(services).forEach(builder::addService));
 //        var builder = ServerBuilder.forPort(port);
 //        Arrays.asList(services).forEach(builder::addService);
 //        return new GrpcServer(builder.build());
     }
 
-    public static GrpcServer create(int port, Consumer<NettyServerBuilder> consumer){
+    public static GrpcServer create(int port, Consumer<NettyServerBuilder> consumer) {
         var builder = ServerBuilder.forPort(port);
         consumer.accept((NettyServerBuilder) builder);
         return new GrpcServer(builder.build());
     }
 
-    public GrpcServer start(){
+    public GrpcServer start() {
         var services = server.getServices()
-                .stream()
-                .map(ServerServiceDefinition::getServiceDescriptor)
-                .map(ServiceDescriptor::getName)
-                .toList();
+                            .stream()
+                            .map(ServerServiceDefinition::getServiceDescriptor)
+                            .map(ServiceDescriptor::getName)
+                            .toList();
         try {
             server.start();
             log.info("server started. listening on port {}. services: {}", server.getPort(), services);
             return this;
-        }catch (Exception e){
+        } catch (Exception e) {
             throw new RuntimeException(e);
         }
     }
 
-    public void await(){
-        try{
+    public void await() {
+        try {
             server.awaitTermination();
-        }catch (Exception e){
+        } catch (Exception e) {
             throw new RuntimeException(e);
         }
     }
 
-    public void stop(){
+    public void stop() {
         server.shutdownNow();
         log.info("server stopped");
     }
